@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.9 1999/10/30 22:55:45 tiniou Exp $
+$Id: CHANGES,v 1.10 1999/10/31 19:48:25 tiniou Exp $
 
 Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 ===================================================================
@@ -21,6 +21,11 @@ Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 	use a rsh replacement like ssh when doing remote backups (and
 	bypass the security limitations of rcmd). Now you can do remote
 	backups without being root (or making dump setuid root).
+
+6.	Modified again the way dumpdates works. For incremental dumps,
+	we need to read dumpdates even if we are not using 'u' option.
+	Thanks to Bdale Garbee <bdale@gag.com> for his ideas on how
+	this should work.
 
 Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
 ===================================================================
